[[release-notes-x.x.x]]
==== x.x.x (YYYY-MM-DD)

[float]
===== Breaking changes
- Breaking change

[float]
===== Deprecated
- Deprecation {pull}2526[#2526]

[float]
===== Added
- Feature {pull}2526[#2526]

[float]
===== Changed
- Change {pull}2526[#2526]

[float]
===== Fixed
- Fix {pull}2526[#2526]

[float]
[[unreleased]]
==== Unreleased
////

[[release-notes-3.x]]
=== Ruby Agent version 3.x

[[release-notes-3.14.0]]
==== 3.14.0 (2021-03-17)

[float]
===== Added

- Expanded support for extracting ActiveRecord adapter name from notification payload when using
  ActiveRecord versions before 6.0 {pull}953[#953]

[float]
===== Fixed

- Fixed setting outcome in Mongo spy when not traced {pull}937[#937]
- Fixed missing container metadata in payloads {pull}942[#942]
- Fixed outgoing HTTP request spans with no Host {pull}962[#962]

[[release-notes-3.13.0]]
==== 3.13.0 (2020-12-22)

[float]
===== Fixed

- Handle invalid utf-8 byte sequences in sql summarizer and DB statement {pull}896[#896]
- Expand Kubernetes metadata discovery {pull}916[#916]
- Fix fetching cloud info on Http.rb 3.x versions {pull}919[#919]

[float]
===== Added

- Support both integer and string log levels, and extra central config values {pull}902[#902]

[float]
===== Changed

- Rename server_ca_cert to server_ca_cert_file {pull}908[#908]

[[release-notes-3.12.1]]
==== 3.12.1 (2020-11-16)

[float]
===== Fixed

- `capture_elasticsearch_queries` no longer modifies the original query {pull}894[#894]

[[release-notes-3.12.0]]
==== 3.12.0 (2020-11-10)

[float]
===== Added

- Add outcome to transactions and spans {pull}883[#883]

[[release-notes-3.11.1]]
==== 3.11.1 (2020-11-05)

[float]
===== Fixed

- Fix reporting from Kubernetes based deploys to APM Server 7.9.x {pull}885[#885]

[[release-notes-3.11.0]]
==== 3.11.0 (2020-10-27)

[float]
===== Added

- Add and read sampling info from Tracestate headers {pull}858[#858]
- Add information about cloud hosting environment if available {pull}871[#871]

[float]